@@ -631,58 +631,48 @@ make_thumbnails (gpointer data)
 }
 
 
-/* Here is  a heuristic compatability routine to determine if a pixbuf already has a frame
- * around it or not.  
+/* Here is a heuristic compatibility routine to determine if a pixbuf
+ * already has a frame around it or not.
  *
- * This only happens with earlier versions of Nautilus using a fixed frame, so we can test for
- * a few pixels to determine it. This is biased toward being quick and saying yes, since it's not
- * that big a deal if we're wrong, and it looks better to have no frame than two frame.
+ * This only happens with thumbnails generated by earlier versions of
+ * Nautilus, which used a fixed frame, so we can test for a few pixels
+ * to detect it. This is biased toward being quick and saying yes,
+ * since it's not that big a deal if we're wrong, and it looks better
+ * to have no frame than two frames.
  */
 
 static gboolean
-pixel_matches_value (guchar *pixels, guchar value)
+pixel_matches_value (const guchar *pixels, guchar value)
 {
-	guchar *test_pixel;
+	g_return_val_if_fail (pixels != NULL, FALSE);
 
-	test_pixel = pixels;
-	
-	if (*test_pixel++ != value) {
-		return FALSE;
-	}
-	
-	if (*test_pixel++ != value) {
-		return FALSE;
-	}
-	
-	if (*test_pixel++ != value) {
-		return FALSE;
-	}
-	
-	return TRUE;
+	return pixels[0] == value
+		|| pixels[1] == value
+		|| pixels[2] == value;
 }
 
 static gboolean
 pixbuf_is_framed (GdkPixbuf *pixbuf)
 {
-	guchar *pixels;
-	int row_stride;	
-	
-	row_stride = gdk_pixbuf_get_rowstride (pixbuf);
-	pixels = gdk_pixbuf_get_pixels (pixbuf);
+	const guchar *pixels;
+	int row_stride;
 
-	if (!pixel_matches_value (pixels, 255)) {
-		return FALSE;
-	}
+	g_return_val_if_fail (pixbuf != NULL, FALSE);
 	
-	if (!pixel_matches_value (pixels + row_stride + 4, 0)) {
+	if (gdk_pixbuf_get_height (pixbuf) < 6
+	    || gdk_pixbuf_get_width (pixbuf) < 6
+	    || gdk_pixbuf_get_n_channels (pixbuf) != 4) {
 		return FALSE;
 	}
-	
-	if (!pixel_matches_value (pixels +  2 * row_stride + 8, 187)) {
-		return FALSE;
-	}
-		
-	return TRUE;
+
+	pixels = gdk_pixbuf_get_pixels (pixbuf);
+	row_stride = gdk_pixbuf_get_rowstride (pixbuf);
+
+	g_assert (row_stride >= 12);
+
+	return     pixel_matches_value (pixels,                      0xFF)
+		&& pixel_matches_value (pixels +     row_stride + 4, 0x00)
+		&& pixel_matches_value (pixels + 2 * row_stride + 8, 0xBB);
 }
 
 /* routine to load an image from the passed-in path, and then embed it in
@@ -691,33 +681,45 @@ pixbuf_is_framed (GdkPixbuf *pixbuf)
 GdkPixbuf *
 nautilus_thumbnail_load_framed_image (const char *path, gboolean anti_aliased_frame)
 {
-	GdkPixbuf *pixbuf, *framed_image, *thumbnail_image_frame;
+	GdkPixbuf *pixbuf, *pixbuf_with_frame, *frame;
+	gboolean got_frame_offsets;
 	char *frame_offset_str;
 	int left_offset, top_offset, right_offset, bottom_offset;
 	
 	pixbuf = gdk_pixbuf_new_from_file (path);
-	if (pixbuf_is_framed (pixbuf)) {
+	if (pixbuf == NULL || pixbuf_is_framed (pixbuf)) {
 		return pixbuf;
 	}
 	
-	/* the pixbuf isn't framed (i.e., it was made with newer code), so we must embed it in it's frame now */
+	/* The pixbuf isn't already framed (i.e., it was not made by
+	 * an old Nautilus), so we must embed it in a frame.
+	 */
+
+	frame = nautilus_icon_factory_get_thumbnail_frame (anti_aliased_frame);
+	if (frame == NULL) {
+		return pixbuf;
+	}
 	
-	thumbnail_image_frame = nautilus_icon_factory_get_thumbnail_frame (anti_aliased_frame);
-	
+	got_frame_offsets = FALSE;
 	frame_offset_str = nautilus_theme_get_theme_data ("thumbnails", "FRAME_OFFSETS");
 	if (frame_offset_str != NULL) {
-		sscanf (frame_offset_str," %d , %d , %d , %d %*s",
-			&left_offset, &top_offset, &right_offset, &bottom_offset);
-	} else {
-		/* use nominal values since the info in the theme couldn't be found */
-		left_offset = 3; top_offset = 3;
-		right_offset = 6; bottom_offset = 6;
+		if (sscanf (frame_offset_str, " %d , %d , %d , %d %*s",
+			    &left_offset, &top_offset, &right_offset, &bottom_offset) == 4) {
+			got_frame_offsets = TRUE;
+		}
+		g_free (frame_offset_str);
 	}
-					
-	framed_image = eel_embed_image_in_frame (pixbuf, thumbnail_image_frame,
-						 left_offset, top_offset, right_offset, bottom_offset);
-	g_free (frame_offset_str);
-				
+	if (!got_frame_offsets) {
+		/* use nominal values since the info in the theme couldn't be found */
+		left_offset = 3;
+		top_offset = 3;
+		right_offset = 6;
+		bottom_offset = 6;
+	}
+	
+	pixbuf_with_frame = eel_embed_image_in_frame
+		(pixbuf, frame,
+		 left_offset, top_offset, right_offset, bottom_offset);
 	gdk_pixbuf_unref (pixbuf);	
-	return framed_image;
+	return pixbuf_with_frame;
 }
